# tree-sitter-sgx

./: .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
queries/sgx/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  sgx.js
test/corpus/: errors.txt  valid-patterns.txt
